manifests/frontend/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: documind-frontend
  namespace: documind
spec:
  replicas: 2
  selector:
    matchLabels:
      app: documind-frontend
  strategy:
    canary:
      steps:
        - setWeight: 25
        - pause: { duration: 30s }
        - setWeight: 50
        - pause: { duration: 30s }
        - setWeight: 100
  template:
    metadata:
      labels:
        app: documind-frontend
    spec:
      containers:
        - name: frontend
          image: 332130072211.dkr.ecr.us-east-1.amazonaws.com/documind-frontend:03ec69b20b5fee0f460cec314547053ab8e7fad3
          ports:
            - containerPort: 80
